妥协了。。。放弃适配jdk21